Revision history for File-Map

{{$NEXT}}
          Fix madvise on cygwin
          Disable advise on VMS

0.45      2012-02-22 20:17:29 Europe/Amsterdam
          Replace round() by floor() + 0.5. The former is C99, the latter in C89...
          Test a bit more leniently on perl 5.8.7

0.44      2012-01-27 14:27:27 Europe/Amsterdam
          Fixed use of BITS32_MASK on Windows

0.43      2012-01-27 12:42:27 Europe/Amsterdam
          Upgrade utf8 mappings before marking them as readonly (fixes #74436)

0.42      2012-01-24 23:24:29 Europe/Amsterdam
          Redone offset handling to be more 32bit compatible
          Add large file support on Windows

0.41      2012-01-14 13:14:23 Europe/Amsterdam
          Fixed bug on Windows when using offsets

0.40      2011-10-24 20:41:19 Europe/Amsterdam
          Made STDOUT test more portable
          Remove all mentioning of VMS

0.39      2011-10-17 21:57:47 Europe/Amsterdam 
          Converted module to Dist::Zilla
          Fixed various issues in unit tests

0.38    2011-08-21
        Taint memory maps when tainting mode is on (fixes RT#68787)
        Explicitly test error messages in "C" locale
        Give better errors on mapping zero length nonfiles
        Handle SV-flags more intelligently

0.37    2011-05-02
        Fixed permission in remap test
        Silenced warnings on modern Test::More's

0.36    2011-01-26
        Fixed tests on Windows and on perl < 5.8.7

0.35    2011-01-16
        Added proper support for PerlIO layers, in order to:
         * reliably detect crlf transformations
         * detect and handle utf8 layers
        Use sterror instead of strerror_r when the latter isn't available

0.34    2010-12-04
        Skip remap tests as soon as possible, to avoid failures on non-Linux
        Fixed anonymous mapping on Windows
        Fixed warning on perl < 5.8.8

0.33    2010-12-01
        Made remap actually useful (will now try to move the map if necesary)
        Added tests for remap